# conventional-markdown-update

./: .gitignore  Cargo.toml  Makefile  README.md  action.yaml
.github/workflows/: release.yml  rust.yml
resources/: changelog.md  config.toml  log.txt
src/: commit.rs  config.rs  main.rs  writer.rs
